--- a/restaurant.html
+++ b/restaurant.html
@@ -112,7 +112,7 @@
         </section>
         
         <section class="dark-section menu-section db-title-section">
-          <!--<img class="bg-texture o-80" src="assets/images/beer-vector-texture.svg" alt="Seeds Background">-->
+          <img class="bg-texture o-60" src="assets/images/restaurant-vector-texture.png" alt="Seeds Background">
           <h1 class="db-title">Menu</h1>
           <h4 class="db-surtitle">Praxis em tua casa</h4>
           <h6 class="menu-dates">7 de abril a 25 de abril - de quarta a domingo</h6>
@@ -183,6 +183,11 @@
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                 </div>
+
+                <div class="menu-actions">
+                  <a href="#takeawayinfo" class="under-btn">Mais informações</a>
+                  <a href="#" class="button light">Encomendar</a>
+                </div>
               </div>
 
               <div class="col-lg-6 offset-lg-1 sided-plate-col">
@@ -198,12 +203,13 @@
         </section>
 
         <section class="chef-section dark-section">
+          <img class="bg-texture o-40" src="assets/images/beer-vector-texture.svg" alt="Seeds Background">
           <div class="chef-content-wrapper">
             <div class="row">
-              <div class="col-lg-7 compound-image-wrapper">
+              <div class="col-xs-12 col-lg-7 compound-image-wrapper">
                 <div class="parallax-window ratio-image" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/restaurant-chef-lg.jpg"></div>
               </div>
-              <div class="col-lg-5 chef-narrative-wrapper">
+              <div class="col-xs-12 col-lg-5 chef-narrative-wrapper">
                 <h3 class="chef-narrative-title">Restaurante Praxis</h3>
                 <h5 class="chef-narrative-info">O Restaurante Praxis integra a Fábrica e Museu da Cerveja de Coimbra.
                 Apresentamos uma gastronomia variada, com as melhores carnes, o melhor pescado e uma seleção com mariscos de qualidade.
@@ -212,10 +218,10 @@
             </div>
 
             <div class="row">
-              <div class="col-lg-6 chef-slogan-wrapper">
+              <div class="col-xs-12 col-lg-6 chef-slogan-wrapper">
                 <h4 class="chef-slogan">SERVING TASTY BITES SINCE 2006</h4>
               </div>
-              <div class="col-lg-6 compound-image-wrapper ng-margin-top">
+              <div class="col-xs-12 col-lg-6 compound-image-wrapper ng-margin-top">
                 <div class="parallax-window flat-image" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/restaurant-franc-lg.jpg"></div>
               </div>
             </div>
@@ -223,11 +229,11 @@
 
           <div class="restaurant-content-wrapper">
             <div class="row">
-              <div class="col-lg-7 compound-image-wrapper">
+              <div class="col-xs-12 col-lg-7 compound-image-wrapper">
                 <div class="parallax-window thin-image" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/restaurant-croc-lg.jpg"></div>
                 <div class="parallax-window ratio-image half-width" data-parallax="scroll" data-speed=".8" data-image-src="assets/images/restaurant-pure-lg.jpg"></div>
               </div>
-              <div class="col-lg-5 chef-narrative-wrapper">
+              <div class="col-xs-12 col-lg-5 chef-narrative-wrapper">
                 <h4 class="chef-narrative-title">Restaurante Praxis</h4>
                 <h5 class="chef-narrative-info">Servimos os nossos clientes com produtos da melhor qualidade e primamos pelo cumprimento das regras e normas da confeção alimentar. 
                   Temos uma equipa que procura sempre satisfazer quem nos visita de forma profissional, humana e simpática. </h5><br>
@@ -237,8 +243,7 @@
           </div>
         </section>
 
-        <section class="dark-section menu-section db-title-section">
-          <!--<img class="bg-texture o-80" src="assets/images/beer-vector-texture.svg" alt="Seeds Background">-->
+        <section class="dark-section gallery-section db-title-section">
           <h1 class="db-title">Galeria</h1>
           <h4 class="db-surtitle">Feast your eyes</h4>
 
@@ -272,7 +277,22 @@
           </div>
         </section>
 
-        <section class="next-page">
+        <section class="takeaway-section">
+          <div class="row takeaway-wrapper">
+            <div class="col-sm-12 col-lg-5 col-xl-4">
+              <h3 class="takeaway-title">Takeaway</h3>
+              <a href="museum.html" class="button light">Encomendar</a>
+            </div>
+            <div class="col-sm-10 col-lg-6 offset-lg-1">
+              <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
+              <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
+              <h5 class="mb-30">Entregas numa distância de 5km.</h5>
+              <h5 class="mb-30">Ligue para o 913 456 5667 para fazer a sua encomenda.</h5>
+            </div>
+          </div>
+        </section>
+
+        <section class="next-page" id="takeawayinfo">
           <a href="" class="next-page-link">
             <div class="next-page-media">
               <img src="./assets/images/visit-banner.jpg" alt="Come visit us">
@@ -289,8 +309,6 @@
             </div>
           </a>
         </section>
-
-        
 
         <footer class="footer">
           <div class="row sitemap-wrapper">
