--- a/community.html
+++ b/community.html
@@ -73,7 +73,7 @@
                 <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
                 <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
                 <li><a href="community.html" class="menu-link">Comunidade</a></li>
-                <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
+                <li><a href="shop.html" class="menu-link">Loja Online</a></li>
               </ul>
               <div class="media-links-container-vertical d-flex">
                 <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
