Restaurant final changes

--- a/restaurant.html
+++ b/restaurant.html
@@ -131,36 +131,36 @@
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
-                      <h5 class="menu-dish-name">Sopa da Quinta</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-name">Cabrito Assado</h5>
+                      <h5 class="menu-dish-price">16.90€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
-                      <h5 class="menu-dish-name">Sopa da Quinta</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-name">Francesinha</h5>
+                      <h5 class="menu-dish-price">10.90€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
-                      <h5 class="menu-dish-name">Sopa da Quinta</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-name">Prato dos Capelos</h5>
+                      <h5 class="menu-dish-price">29.90€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
-                      <h5 class="menu-dish-name">Sopa da Quinta</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-name">Bacalhau Espiritual</h5>
+                      <h5 class="menu-dish-price">13.90€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
-                      <h5 class="menu-dish-name">Sopa da Quinta</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-name">Camarão Cozido</h5>
+                      <h5 class="menu-dish-price">34.90€/kg</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
@@ -171,14 +171,14 @@
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
                       <h5 class="menu-dish-name">Pastel de Nata</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-price">2.00€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
                   <div class="menu-dish-wrapper">
                     <div class="menu-dish-container">
                       <h5 class="menu-dish-name">Pudim de Cereja</h5>
-                      <h5 class="menu-dish-price">2.20€</h5>
+                      <h5 class="menu-dish-price">2.90€</h5>
                     </div>
                     <p class="menu-dish-ingredients">Serrano ham, spinach, roasted red peppers, tomato, pil pil sauce</p>
                   </div>
@@ -186,7 +186,7 @@
 
                 <div class="menu-actions">
                   <a href="#takeawayinfo" class="under-btn">Mais informações</a>
-                  <a href="#" class="button light">Encomendar</a>
+                  <a href="tel:+351239440207" class="button light">Encomendar</a>
                 </div>
               </div>
 
@@ -281,33 +281,15 @@
           <div class="row takeaway-wrapper">
             <div class="col-sm-12 col-lg-5 col-xl-4">
               <h3 class="takeaway-title">Takeaway</h3>
-              <a href="museum.html" class="button light">Encomendar</a>
+              <a href="tel:+351239440207" class="button light">Encomendar</a>
             </div>
             <div class="col-sm-10 col-lg-6 offset-lg-1">
               <h5 class="mb-30">De Quarta a Domingo (almoço e jantar).</h5>
               <h5 class="mb-30">Até às 10h e 17h do próprio dia para almoço e jantar, respetivamente.</h5>
               <h5 class="mb-30">Entregas numa distância de 5km.</h5>
-              <h5 class="mb-30">Ligue para o 913 456 5667 para fazer a sua encomenda.</h5>
+              <h5 class="mb-30">Ligue para o 239 440 207 para fazer a sua encomenda.</h5>
             </div>
           </div>
-        </section>
-
-        <section class="next-page" id="takeawayinfo">
-          <a href="" class="next-page-link">
-            <div class="next-page-media">
-              <img src="./assets/images/visit-banner.jpg" alt="Come visit us">
-            </div>
-            <div class="next-page-content">
-              <div class="row">
-                <div class="col-12">
-                  <h6 class="next-page-surtitle">Descobre a história da cerveja conímbricense</h6>
-                </div>
-                <div class="col-12">
-                  <h3 class="next-page-title">Venha visitar-nos</h3>
-                </div>
-              </div>
-            </div>
-          </a>
         </section>
 
         <footer class="footer">
