--- a/restaurant.html
+++ b/restaurant.html
@@ -36,70 +36,77 @@
     <body>
       <header class="menu">
         <nav class="navbar">
-          <a href="index.html" class="navbar-brand">
-            <img src="assets/images/praxis-logo.svg">
-          </a>
-          <a class="burger-menu" href="#">
-            <span class="bar"></span>
-          </a>
+          <div class="brand-container">
+            <a href="index.html" class="navbar-brand">
+              <img src="assets/images/praxis-logo.svg">
+            </a>
+            <a class="burger-menu" href="#">
+              <span class="bar"></span>
+            </a>
+          </div>
 
-          <div class="overlay">
-            <div class="menu-panel">
-              <div class="lang-links-container">
-                <a href="" class="lang-link selected">PT</a>
-                <a href="" class="lang-link">EN</a>
-              </div>
-              <ul>
-                <li class="menu-hasdropdown">
-                  <a href="beers.html" class="menu-link beers-link">
-                    <span class="selected-link">Cervejas</span>
-                    <label title="toggle menu" for="cervejas">
-                      <img src="assets/images/navigation-arrow.svg">
-                    </label>
-                  </a>
-                  <input type="checkbox" id="cervejas">
-                  <ul class="menu-dropdown">
-                    <li><a href="beers/pilsener.html" class="submenu-link">Pilsener</a></li>
-                    <li><a href="" class="submenu-link">Dunkel</a></li>
-                    <li><a href="" class="submenu-link">Ambar</a></li>
-                    <li><a href="" class="submenu-link">Weiss</a></li>
-                    <li><a href="" class="submenu-link">Belgian Dark</a></li>
-                    <li><a href="" class="submenu-link">Portuguese Pedro</a></li>
-                    <li><a href="" class="submenu-link">IPA</a></li>
-                    <li><a href="" class="submenu-link">Pumpkin Ale</a></li>
-                    <li><a href="" class="submenu-link">Lausus</a></li>
-                    <li class="specials"><label>Especiais</label></li>
-                    <li><a href="" class="submenu-link">Dunkel Strong</a></li>
-                    <li><a href="" class="submenu-link">B.S.D.A</a></li>
-                  </ul>
-                </li>
-                <li><a href="museum.html" class="menu-link">Museu</a></li>
-                <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
-                <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
-                <li><a href="community.html" class="menu-link">Comunidade</a></li>
-                <li><a href="shop.html" class="menu-link">Loja Online</a></li>
+          <!-- Add   filled-cart   class when cart has a product -->
+          <a class="shopping-menu" href="#">
+            <img class="shopping-cart-icon" src="assets/images/shopping-cart-icon.svg">
+          </a>
+        </nav>
+
+		  <div class="overlay">
+        <div class="menu-panel">
+          <div class="lang-links-container">
+            <a href="" class="lang-link selected">PT</a>
+            <a href="" class="lang-link">EN</a>
+          </div>
+          <ul>
+            <li class="menu-hasdropdown">
+              <a href="beers.html" class="menu-link beers-link">
+                <span class="selected-link">Cervejas</span>
+                <label title="toggle menu" for="cervejas">
+                  <img src="assets/images/navigation-arrow.svg">
+                </label>
+              </a>
+              <input type="checkbox" id="cervejas">
+              <ul class="menu-dropdown">
+                <li><a href="beers/pilsener.html" class="submenu-link">Pilsener</a></li>
+                <li><a href="" class="submenu-link">Dunkel</a></li>
+                <li><a href="" class="submenu-link">Ambar</a></li>
+                <li><a href="" class="submenu-link">Weiss</a></li>
+                <li><a href="" class="submenu-link">Belgian Dark</a></li>
+                <li><a href="" class="submenu-link">Portuguese Pedro</a></li>
+                <li><a href="" class="submenu-link">IPA</a></li>
+                <li><a href="" class="submenu-link">Pumpkin Ale</a></li>
+                <li><a href="" class="submenu-link">Lausus</a></li>
+                <li class="specials"><label>Especiais</label></li>
+                <li><a href="" class="submenu-link">Dunkel Strong</a></li>
+                <li><a href="" class="submenu-link">B.S.D.A</a></li>
               </ul>
-              <div class="media-links-container-vertical d-flex">
-                <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
-                  <img src="assets/images/facebook-logo.svg">
-                </a>
-                <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
-                  <img src="assets/images/instagram-logo.svg">
-                </a>
-                <!-- Youtube Link Missing -->
-                <a href="" class="media-link youtube">
-                  <img src="assets/images/youtube-logo.svg">
-                </a>
-                <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
-                  <img src="assets/images/tripadvisor-logo.svg">
-                </a>
-                <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
-                  <img src="assets/images/untappd-logo.svg">
-                </a>
-              </div>
+            </li>
+            <li><a href="museum.html" class="menu-link">Museu</a></li>
+            <li><a href="restaurant.html" class="menu-link">Restaurante</a></li>
+            <li><a href="brewery.html" class="menu-link">Fábrica Praxis</a></li>
+            <li><a href="community.html" class="menu-link">Comunidade</a></li>
+            <li class="disabled"><a href="" class="menu-link">Loja Online</a></li>
+            </ul>
+            <div class="media-links-container-vertical d-flex">
+            <a href="https://www.facebook.com/cervejaPraxis" class="media-link facebook">
+              <img src="assets/images/facebook-logo.svg">
+            </a>
+            <a href="https://www.instagram.com/praxisbeer/" class="media-link instagram">
+              <img src="assets/images/instagram-logo.svg">
+            </a>
+            <!-- Youtube Link Missing -->
+            <a href="" class="media-link youtube">
+              <img src="assets/images/youtube-logo.svg">
+            </a>
+            <a href="https://www.tripadvisor.pt/Restaurant_Review-g189143-d3336615-Reviews-Praxis_Coimbra-Coimbra_Coimbra_District_Central_Portugal.html" class="media-link tripadvisor">
+              <img src="assets/images/tripadvisor-logo.svg">
+            </a>
+            <a href="https://untappd.com/w/praxis/34853/" class="media-link untappd">
+              <img src="assets/images/untappd-logo.svg">
+            </a>
             </div>
           </div>
-        </nav>
+        </div>
       </header>
 
       <main>
