small fixes on cart modal

--- a/shop.html
+++ b/shop.html
@@ -116,12 +116,12 @@
 					</article>
 					<article class="cart-item">
 						<div class="cart-item-thumbnail">
-							<img src="assets/images/dunkel-beer-md.png">
+							<img src="assets/images/pack-beer-md.png">
 						</div>
 						<div class="cart-item-info-wrapper">
 							<div class="cart-item-info">
-								<h4 class="cart-item-name">Dunkel</h4>
-								<h6 class="cart-item-price">2.50€</h6>
+								<h4 class="cart-item-name">Pack 8</h4>
+								<h6 class="cart-item-price">10.50€</h6>
 							</div>
 							<div class="cart-item-form">
 								<div class="cart-item-field">
