Add back link, improve responsive header

--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -33,7 +33,7 @@
         <nav class="navbar">
           <div class="brand-container">
             <a href="index.html" class="navbar-brand">
-              <img src="assets/images/praxis-logo.svg">
+              <img src="../assets/images/praxis-logo.svg">
             </a>
             <a class="burger-menu" href="#">
               <span class="bar"></span>
@@ -42,7 +42,7 @@
 
           <!-- Add   filled-cart   class when cart has a product -->
           <a class="shopping-menu" href="#">
-            <img class="shopping-cart-icon" src="assets/images/shopping-cart-icon.svg">
+            <img class="shopping-cart-icon" src="../assets/images/shopping-cart-icon.svg">
           </a>
         </nav>
 
