Remove useless class

--- a/shop.html
+++ b/shop.html
@@ -258,7 +258,7 @@
 										</div>		
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -288,7 +288,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -316,7 +316,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -344,7 +344,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -371,7 +371,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -395,7 +395,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -419,7 +419,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -443,7 +443,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -470,7 +470,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -497,7 +497,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
@@ -525,7 +525,7 @@
 										</div>
 									</div>
 								</a>
-								<div class="form-field quantity-wrapper">
+								<div class="quantity-wrapper">
 									<div class="quantity-input">
 										<input type="number" min="1" max="100" step="1" value="1">
 										<span class="quantity-button quantity-down"><img src="./assets/images/minus.svg"></span>
