--- a/community.html
+++ b/community.html
@@ -132,7 +132,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <article class="card-article">
-                  <a class="card-article-link" href="#">
+                  <a class="card-article-link" href="news-page.html">
                     <div class="card-article-media">
                       <img src="./assets/images/news-standup-night.jpg">
                     </div>
@@ -160,7 +160,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="card-article">
-                  <a class="card-article-link" href="#">
+                  <a class="card-article-link" href="news-page.html">
                     <div class="card-article-media">
                       <img src="./assets/images/news-bsda.jpg">
                     </div>
@@ -174,7 +174,7 @@
               </div>
               <div class="swiper-slide">
                 <article class="card-article">
-                  <a class="card-article-link" href="#">
+                  <a class="card-article-link" href="news-page.html">
                     <div class="card-article-media">
                       <img src="./assets/images/news-topazio.jpg">
                     </div>
