--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     </head>
 
     <body>
+      <div class="cookie-banner">
+        <small>Utilizamos cookies próprias e de terceiros para melhorar a sua experiência e os nossos serviços. Se continuar a navegar, consideramos que aceita a sua utilização.</small>
+        <button class="close-cookie">
+          <img src="assets/images/close.svg">
+        </button>
+    </div>
+
       <header class="menu">
         <nav class="navbar">
           <div class="brand-container">
@@ -41,7 +48,6 @@
             </a>
           </div>
 
-          <!-- Add   filled-cart   class when cart has a product -->
           <a class="shopping-menu" href="#">
             <img class="shopping-cart-icon" src="assets/images/shopping-cart-icon.svg">
           </a>
@@ -383,5 +389,6 @@
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/news-scroll.js"></script>
+    <script src="assets/js/cookies.js"></script>
   </body>
 </html>
