fixing cookie display

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </head>
 
     <body>
-      <div class="cookie-banner">
+      <div class="cookie-banner" style="display: none;">
         <small>Utilizamos cookies próprias e de terceiros para melhorar a sua experiência e os nossos serviços. Se continuar a navegar, consideramos que aceita a sua utilização.</small>
         <button class="close-cookie">
           <img src="assets/images/close.svg">
