Adding general page loader

--- a/brewery.html
+++ b/brewery.html
@@ -26,9 +26,16 @@
     <meta property="article:author" content="https://www.facebook.com/cervejaPraxis"/>
     
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+     <script src="assets/js/loader.js"></script>
     </head>
 
     <body>
+
+    <div class="loader">
+      <img class="loading-icon" src="assets/images/loading-icon.png">
+    </div>
+
       <header class="menu">
         <nav class="navbar">
           <div class="brand-container">
@@ -362,7 +369,6 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
       </main>
     </body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="assets/js/parallax.js"></script>
     <script src="assets/js/navigation.js"></script>
 </html>
