--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
 
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/js/cookies.js"></script>
+    <script src="assets/js/loader.js"></script>
     </head>
 
     <body>
+
+      <!------ LOADER ----->
+
+      <div class="loader">
+        <img class="loading-icon" src="assets/images/loading-icon.png">
+      </div>
 
       <!------ LITTLE COOKIE BAR ----->
 
@@ -406,11 +416,9 @@
         </footer>
       </main>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/beer-scroll.js"></script>
     <script src="assets/js/news-scroll.js"></script>
-    <script src="assets/js/cookies.js"></script>
   </body>
 </html>
