Adding praxis logo to age verification logo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <body>
 
-      <!------ LOADER ----->
+      <!------ LOADER (If needed, probably not) ----->
 
       <div class="loader">
         <img class="loading-icon" src="assets/images/loading-icon.png">
@@ -54,6 +54,7 @@
 
       <div id="popup" data-popup="popup-1" class="age-verification-overlay">
         <div class="verify-window age-verification-window">
+          <img class="backdrop-logo" src="assets/images/praxis-logo.svg">
           <div class="age-verification-content justify-content-center">
             <h4 class="age-verification-title t-center">Bem vindo ao mundo praxis <br> Tens mais de 18 anos?</h4>
             <div class="d-flex justify-content-center actions-wrapper mb-30">
